--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "league/url": "^3.3",
         "phpmailer/phpmailer": "^5.2",
         "plasticbrain/php-flash-messages": "^1.0",
+        "respect/validation": "^1.1"
     },
 
     "autoload": {
